android-platform-frameworks-base (1:6.0.1+r16-2) UNRELEASED; urgency=medium

  * New package: libandroid-23-java for Android Frameworks android.jar
  * d/control:
    - Move build helper pacakges to Build-Depends
    - Limit some BDs to [amd64 i386]

 -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 24 Mar 2016 21:15:53 +0800

android-platform-frameworks-base (1:6.0.1+r16-1) unstable; urgency=medium

  * New upstream release
    - d/rules: Update BUILD_TOOLS_VERSION to 23.0.2
  * d/copyright: Exclude more useless files to reduce tarball size
  * Use aapt.bash-completion for installing bash-completion

 -- Kai-Chung Yan <seamlikok@gmail.com>  Wed, 17 Feb 2016 18:59:36 +0800

android-platform-frameworks-base (1:6.0.0+r26-3) unstable; urgency=medium

  * d/control:
    - Do not use ${binary:Version} on external packages
    - Remove libunwind from B-D as unnecessary

 -- Kai-Chung Yan <seamlikok@gmail.com>  Tue, 09 Feb 2016 02:06:39 +0800

android-platform-frameworks-base (1:6.0.0+r26-2) unstable; urgency=medium

  * d/split-select.1.md: Fix syntax error
  * d/libandroidfw.mk: Add "-Wl,-rpath=/usr/lib/android" to LDFLAGS
  * d/copyright: Include more upstream files for building the Android Frameworks
  * d/control: Add android-libunwind (>= 6) to B-D for solving the build failure

 -- Kai-Chung Yan <seamlikok@gmail.com>  Sun, 07 Feb 2016 13:25:26 +0800

android-platform-frameworks-base (1:6.0.0+r26-1) experimental; urgency=medium

  * New upstream release
  * Change version scheme to follow Android release tags
  * get-orig-source rule in d/rules for generating upstream tarballs
  * Install executables to faked SDK home
  * Makefiles independent from Quilt
  * New package: aidl, split-select, android-libaapt
  * Use makefiles for generating library symlinks
  * Add lintian-overrides for binary-or-shlib-defines-rpath
  * New manpages for aidl, split-select
  * Update d/copyright
  * d/control:
    - Add myself to Uploaders
    - Change architecture to amd64 & i386