@@ -21,8 +21,10 @@ Build-Depends: android-libbase-dev (>= 1:6.0.0+r26~) [amd64 i386],
                maven-repo-helper,
                pandoc,
                zlib1g-dev [amd64 i386]
-Build-Depends-Indep: default-jdk,
+Build-Depends-Indep: android-platform-libcore-source-6.0.1,
+                     default-jdk,
                      libxpp3-java
+Built-Using: android-platform-libcore-source-6.0.1
 Standards-Version: 3.9.7
 Homepage: https://android.googlesource.com/platform/frameworks/base
 Vcs-Git: https://anonscm.debian.org/git/android-tools/android-platform-frameworks-base.git
