@@ -5,8 +5,7 @@ include /usr/share/dpkg/pkg-info.mk
 UPSTREAM_TAG = android-$(subst +,_,$(DEB_VERSION_UPSTREAM))
 # See sdk/build_tools_source.prop_template in platform/development
 export BUILD_TOOLS_VERSION = 23.0.2
-GRADLE_OPTIONS = --settings-file debian/settings.gradle --offline \
-                 --gradle-user-home debian/.gradlehome
+GRADLE_OPTIONS = --settings-file debian/settings.gradle
 
 %:
 	dh $@
@@ -34,7 +33,7 @@ override_dh_shlibdeps:
 override_dh_auto_clean:
 	dh_auto_clean
 	mh_clean
-	$(RM) -r debian/.gradle debian/build debian/.gradlehome
+	$(RM) -r debian/.gradle debian/build .gradle
 	make clean -f debian/libandroidfw.mk
 	make clean -f debian/libaapt.mk
 	make clean -f debian/aapt.mk
