@@ -4,6 +4,7 @@ android-platform-frameworks-base (1:6.0.1+r16-2) UNRELEASED; urgency=medium
   * d/control:
     - Move build helper pacakges to Build-Depends
     - Limit some BDs to [amd64 i386]
+    - Built-Using & Build-Depends-Indep: android-platform-libcore-source-6.0.1
 
  -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 24 Mar 2016 21:15:53 +0800
 
